# minimap2-pure-rs

./: Cargo.toml  OPTIMIZATION.md  README.md  ccc_mapping.toml
scripts/: benchmark_manifest.example.tsv  benchmark_speed.py  benchmark_yeast_splice.py  conformance_manifest.example.tsv  conformance_matrix.py  parity_matrix.py  prepare_external_small_conformance_data.sh  prepare_minimal_conformance_data.sh  prepare_zenodo_19703025_hg38_data.sh  run_raw_rna_full_compare.sh  run_zenodo_19703025_compare.sh
src/: aligner.rs  bseq.rs  cli.rs  esterr.rs  flags.rs  hit.rs  jump.rs  junc.rs  lib.rs  main.rs  map.rs  options.rs  pe.rs  pipeline.rs  sdust.rs  seed.rs  seq.rs  sketch.rs  sort.rs  types.rs
src/align/: ksw2.rs  ksw2_simd.rs  mod.rs  score.rs
src/chain/: backtrack.rs  dp.rs  mod.rs  rmq.rs
src/format/: cs.rs  mod.rs  paf.rs  sam.rs
src/index/: bucket.rs  io.rs  mod.rs  split.rs
tests/: integration.rs  zdrop_test_data.rs
tests/data/: README.md  chr11_bug_query.fq  chr11_bug_window.fa  mt_alt.txt  pe_interleaved.fq  pe_r1.fq  pe_r2.fq  splice_junc.bed  splice_query.fa  splice_ref.fa
