[package]
name = "minimap2-pure-rs"
version = "0.5.0"
edition = "2021"
description = "Pure Rust reimplementation of minimap2 sequence aligner"
license = "MIT"
homepage = "https://github.com/henriksson-lab/minimap2-pure-rs"
repository = "https://github.com/henriksson-lab/minimap2-pure-rs"
categories = ["command-line-utilities", "science"]
keywords = ["bioinformatics", "alignment", "genomics", "minimap2", "sequencing"]

[[bin]]
name = "minimap2-pure-rs"
path = "src/main.rs"

[lib]
name = "minimap2"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
hashbrown = "0.16"
bitflags = "2"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
flate2 = "1"
memchr = "2"
tracehash-rs = { version = "0.1", optional = true }

[features]
default = []
# Cross-language input/output hash tracing for parity debugging vs C minimap2.
# Enable on both sides:
#   cargo build --release --features tracehash
#   make -C minimap2 clean && make -C minimap2 TRACEHASH=1
# Then run both binaries with TRACEHASH_OUT, TRACEHASH_SIDE, TRACEHASH_RUN_ID
# set; diff the resulting TSVs to localize parity divergences.
tracehash = ["dep:tracehash-rs"]

[dev-dependencies]
criterion = "0.8"
tempfile = "3"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
