[package]
name = "minimap2-pure-rs"
version = "0.5.2"
edition = "2021"
description = "Pure Rust reimplementation of minimap2 sequence aligner"
license = "MIT"
homepage = "https://github.com/henriksson-lab/minimap2-pure-rs"
repository = "https://github.com/henriksson-lab/minimap2-pure-rs"
categories = ["command-line-utilities", "science"]
keywords = ["bioinformatics", "alignment", "genomics", "minimap2", "sequencing"]
exclude = [
    ".cargo/**",
    ".codex",
    ".codex/**",
    ".gitignore",
    ".tmp/**",
    ".tmp-rustc/**",
    ".tracehash/**",
    "1750",
    "CLAUDE.md",
    "Cargo.toml.orig",
    "Makefile",
    "TODO.md",
    "ccc_mapping.toml",
    "data/**",
    "minimap2/**",
    "perf.data",
    "perf.data.old",
    "scripts/**",
    "target-prof/**",
    "target-trace/**",
]

[[bin]]
name = "minimap2-pure-rs"
path = "src/main.rs"

[lib]
name = "minimap2"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
hashbrown = "0.16"
bitflags = "2"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
flate2 = "1"
memchr = "2"
tracehash-rs = { version = "0.2.0", optional = true, default-features = false, features = ["derive"] }

[features]
default = []
# Cross-language input/output hash tracing for parity debugging vs C minimap2.
# Enable on both sides:
#   cargo build --release --features tracehash           # hash-only
#   cargo build --release --features tracehash-deep      # hash + deep dclog
#   make -C minimap2 clean && make -C minimap2 TRACEHASH=1
# Then run with TRACEHASH_OUT, TRACEHASH_SIDE, TRACEHASH_RUN_ID set; diff the
# resulting TSVs. For deep mode add TRACEHASH_DEEP_DIR and inspect dclogs
# with the `tracehash-compare` / `deepcomp` tools.
tracehash = ["dep:tracehash-rs"]
tracehash-deep = ["tracehash", "tracehash-rs/deep"]

[dev-dependencies]
criterion = "0.8"
tempfile = "3"

[profile.dev]
opt-level = 2

[profile.test]
opt-level = 2

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
